--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
 # FastAPI
-fastapi
-uvicorn[standard]
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
 
 # Database (PostgreSQL)
-sqlalchemy
-psycopg2-binary # Or use psycopg2 if you have build prerequisites
-alembic # For migrations (good practice)
+sqlalchemy>=2.0.0
+asyncpg>=0.27.0 # Add asyncpg driver for PostgreSQL
+# psycopg2-binary>=2.9.5 # Keep or remove depending if sync driver is still needed elsewhere
+alembic>=1.9.0 # For migrations (good practice)
 
 # Data Validation & Settings
-pydantic[email]
-pydantic-settings # Replaces BaseSettings in Pydantic v2
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+python-dotenv>=1.0.0
 
 # Security
-cryptography
-passlib[bcrypt]
+cryptography>=40.0.0
+passlib[bcrypt]>=1.7.4
 python-jose[cryptography] # For potential JWT use later
 
 # TabPFN Client
-tabpfn-client
-
-# Dotenv support
-python-dotenv 
+tabpfn-client>=0.1.7 # Or the appropriate version 
