Completed milestone 7: CSV upload API. the API endpoint was added, as well as docs updates for how to use it, how to deploy the project via gcloud CLI, and testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ python-dotenv>=1.0.0
 
 # Data Handling
 pandas==2.2.1
+python-multipart>=0.0.5  # Required for file uploads in FastAPI
 
 # Security
 cryptography==42.0.5
