--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ uvicorn[standard]>=0.20.0
 sqlalchemy>=2.0.0
 asyncpg>=0.27.0 # Add asyncpg driver for PostgreSQL
 # psycopg2-binary>=2.9.5 # Keep or remove depending if sync driver is still needed elsewhere
-alembic>=1.13.1 # For migrations (good practice)
+alembic==1.13.1
 
 # Data Validation & Settings
 pydantic>=2.0.0
@@ -19,7 +19,7 @@ python-multipart>=0.0.5  # Required for file uploads in FastAPI
 
 # Security
 cryptography==42.0.5
-passlib==1.7.4
+passlib[bcrypt]==1.7.4
 python-jose[cryptography] # For potential JWT use later
 
 # TabPFN Client
@@ -27,4 +27,7 @@ tabpfn-client==0.1.7
 
 # Development/Testing Dependencies (can be in requirements-dev.txt)
 # pytest==8.1.1
-# httpx==0.27.0 
+# httpx==0.27.0
+
+# UI
+jinja2==3.1.3 
